--- a/medical/index.html
+++ b/medical/index.html
@@ -67,82 +67,129 @@
     </div>
     <!--// Header container section 1-->
 
- <!-- ==============================Section service starting================= -->
- <div class="section-service">
-        <div class="container">
-            <div class="container">
-                <div class="row">
-                    <div class="col  py-3 d-flex justify-content-between">
-                        <div class="icon-box px-3">
-                            <img src="IMG-20181103-WA0047.jpg" alt="not found" class="icon">
-                        </div>
-                        <div class="text-box">
-                            <h5>24/7 EMERGENCY</h5>
-                            <p class="icon-text">inappropriate behavior is often laughed off as “boys will be boys,”
-                                women face higher conduct women face higher conduct.</p>
-                        </div>
+    <!-- ==============================Section icons starting================= -->
+    <div class="section-service">
+        <div class="container py-3 my-5">
+            <div class="row">
+                <div class="col  py-3 d-flex justify-content-between">
+                    <div class="icon-box px-3">
+                        <img src="IMG-20181103-WA0047.jpg" alt="not found" class="icon">
                     </div>
-                    <div class="col  py-3 d-flex justify-content-between">
-                        <div class="icon-box px-3">
-                            <img src="health-icon-15.jpg" alt="not found" class="icon">
-                        </div>
-                        <div class="text-box">
-                            <h5>24/7 EMERGENCY</h5>
-                            <p class="icon-text">inappropriate behavior is often laughed off as “boys will be boys,”
-                                women face higher conduct women face higher conduct.</p>
-                        </div>
+                    <div class="text-box">
+                        <h5>24/7 EMERGENCY</h5>
+                        <p class="icon-text">inappropriate behavior is often laughed off as “boys will be boys,”
+                            women face higher conduct women face higher conduct.</p>
                     </div>
                 </div>
-
-                <div class="row">
-                    <div class="col  py-3 d-flex justify-content-between">
-                        <div class="icon-box px-3">
-                            <img src="BarRandom-512.png" alt="not found" class="icon">
-                        </div>
-                        <div class="text-box">
-                            <h5>X-RAY SERVICE</h5>
-                            <p class="icon-text">inappropriate behavior is often laughed off as “boys will be boys,”
-                                women face higher conduct women face higher conduct.</p>
-                        </div>
+                <div class="col  py-3 d-flex justify-content-between">
+                    <div class="icon-box px-3">
+                        <img src="health-icon-15.jpg" alt="not found" class="icon">
                     </div>
-                    <div class="col  py-3 d-flex justify-content-between">
-                            <div class="icon-box px-3">
-                                <img src="animal-paw-vector-icon-animals-icons-icons-download-0.png" alt="not found" class="icon">
-                            </div>
-                            <div class="text-box">
-                                <h5>X-RAY SERVICE</h5>
-                                <p class="icon-text">inappropriate behavior is often laughed off as “boys will be boys,”
-                                    women face higher conduct women face higher conduct.</p>
-                            </div>
-                        </div>
+                    <div class="text-box">
+                        <h5>24/7 EMERGENCY</h5>
+                        <p class="icon-text">inappropriate behavior is often laughed off as “boys will be boys,”
+                            women face higher conduct women face higher conduct.</p>
+                    </div>
                 </div>
+            </div>
 
-                <div class="row">
-                    <div class="col  py-3 d-flex justify-content-between">
-                        <div class="icon-box px-3">
-                            <img src="bug-icon-16.jpg" alt="not found" class="icon">
-                        </div>
-                        <div class="text-box">
-                            <h5>INTENSIVE CARE</h5>
-                            <p class="icon-text">inappropriate behavior is often laughed off as “boys will be boys,”
-                                women face higher conduct women face higher conduct.</p>
-                        </div>
+            <div class="row">
+                <div class="col  py-3 d-flex justify-content-between">
+                    <div class="icon-box px-3">
+                        <img src="BarRandom-512.png" alt="not found" class="icon">
                     </div>
-                    <div class="col  py-3 d-flex justify-content-between">
-                            <div class="icon-box px-3">
-                                <img src="social-people-icon-12.jpg"
-                                     alt="not found" class="icon">
-                            </div>
-                            <div class="text-box">
-                                <h5>INTENSIVE CARE</h5>
-                                <p class="icon-text">inappropriate behavior is often laughed off as “boys will be boys,”
-                                    women face higher conduct women face higher conduct.</p>
-                            </div>
-                        </div>
+                    <div class="text-box">
+                        <h5>X-RAY SERVICE</h5>
+                        <p class="icon-text">inappropriate behavior is often laughed off as “boys will be boys,”
+                            women face higher conduct women face higher conduct.</p>
+                    </div>
+                </div>
+                <div class="col  py-3 d-flex justify-content-between">
+                    <div class="icon-box px-3">
+                        <img src="animal-paw-vector-icon-animals-icons-icons-download-0.png" alt="not found" class="icon">
+                    </div>
+                    <div class="text-box">
+                        <h5>X-RAY SERVICE</h5>
+                        <p class="icon-text">inappropriate behavior is often laughed off as “boys will be boys,”
+                            women face higher conduct women face higher conduct.</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col  py-3 d-flex justify-content-between">
+                    <div class="icon-box px-3">
+                        <img src="bug-icon-16.jpg" alt="not found" class="icon">
+                    </div>
+                    <div class="text-box">
+                        <h5>INTENSIVE CARE</h5>
+                        <p class="icon-text">inappropriate behavior is often laughed off as “boys will be boys,”
+                            women face higher conduct women face higher conduct.</p>
+                    </div>
+                </div>
+                <div class="col  py-3 d-flex justify-content-between">
+                    <div class="icon-box px-3">
+                        <img src="social-people-icon-12.jpg" alt="not found" class="icon">
+                    </div>
+                    <div class="text-box">
+                        <h5>INTENSIVE CARE</h5>
+                        <p class="icon-text">inappropriate behavior is often laughed off as “boys will be boys,”
+                            women face higher conduct women face higher conduct.</p>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
+    <!--=============================== Icons section end==================== -->
+
+
+    <!--============= section form starting=========== -->
+    <div class="section-form bg-dark w-100 ">
+        <div class="row w-100 ">
+            <div class="col bg-dark">
+                <img src="download.jpg" alt="" class="img-1 w-100  d-flex justify-content-starting">
+            </div>
+            <div class="col ">
+                <div class="tit">
+                    <h2 class="txt font-weight-bold px-5 py-5 text-white">Book An <br>
+                        Appoinment
+                    </h2>
+                </div>
+                <div class="form-mother px-5">
+                    <div class="row">
+                        <div class="col">
+                            <form action="#">
+                                <input type="text" class="form-1  text-light bg-dark my-3 w-100 py-2" placeholder="    Patient name">
+                            </form>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col">
+                            <form action="#">
+                                <input type="text" class="form-1 text-light my-3 bg-dark w-100 py-2" placeholder="    Phone">
+                            </form>
+                        </div>
+                        <div class="col">
+                            <form action="#">
+                                <input type="text" class="form-1  text-light my-3 py-3 bg-dark w-100 py-2" placeholder="   Appointment date">
+                            </form>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col">
+                            <form action="#">
+                                <input type="text" class="form-1  text-light bg-dark my-3 w-100 h-40 py-5" placeholder="    Messege">
+                            </form>
+                        </div>
+                    </div>
+                    <button type="button" class="get-started-button-2">Get Started <i class="arrow-icon fas fa-arrow-right"></i></button>
+                </div>
+
+            </div>
+
+        </div>
+
+
 
 
 
