--- a/medicalll-master/index.html
+++ b/medicalll-master/index.html
@@ -146,7 +146,7 @@
     <!--============= section form starting=========== -->
     <div class="section-form bg-dark w-100 ">
         <div class="row w-100 ">
-            <div class="col bg-dark">
+            <div class="col bg-#212529">
                 <img src="download.jpg" alt="" class="img-1 w-100  d-flex justify-content-starting">
             </div>
             <div class="col ">
@@ -157,7 +157,7 @@
                 </div>
                 <div class="form-mother px-5">
                     <div class="row">
-                        <div class="col">
+                        <div class="col ">
                             <form action="#">
                                 <input type="text" class="form-1  text-light bg-dark my-3 w-100 py-2" placeholder="    Patient name">
                             </form>
@@ -182,18 +182,27 @@
                             </form>
                         </div>
                     </div>
-                    <button type="button" class="get-started-button-2">Get Started <i class="arrow-icon fas fa-arrow-right"></i></button>
+                    <div class="button w-100  d-flex justify-content-end">
+                        <button type="button" class="get-started-button-2">Confirm booking <i class="arrow-icon fas fa-arrow-right"></i></button>
+                    </div>
                 </div>
-
             </div>
-
         </div>
+    </div>
+    <!--//======== Section form end======== -->
+    <!-- ================Startin container arena============= -->
+  <!--  <div class="section-container-arena bg-dark w-100">
+        <div class="container">
+          <div class="row w-100 bg-light d-flex justify-content-center">
+             <div class="col-md-8 mt-5 ">
+                 <h2 class="h2 d-flex justify-content-center align-items-center" >Our Consultants</h2>
+             </div>
+          </div>
+        </div>-->
 
 
 
-
-
-
+    </div>
 </body>
 
 </html>
